2003-09-18  Martin Baulig  <martin@ximian.com>

	* typemanager.cs (TypeHandle.ctor): Set `IsInterface' solely based
	on `type.IsInterface'; don't check whether the type has a parent
	to determine whether it's an interface.

2003-09-15  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineType): Added an error flag to
	avoid reporting duplicate CS0146's ("class definition is
	circular.").

	* driver.cs (Driver.MainDriver): Abort if
	RootContext.ResolveTree() reported any errors.

2003-09-07  Martin Baulig  <martin@ximian.com>

	* report.cs (Error, Warning): Added overloaded versions which take
	a `params object[] args' and call String.Format().

2003-09-07  Martin Baulig  <martin@ximian.com>

	* decl.cs (DeclSpace..ctor): Don't call
	NamespaceEntry.DefineName() here; do it in RecordDecl() which is
	called from Tree.RecordDecl().  Fixes the CS0101 reporting.
	(DeclSpace.RecordDecl): New method.

	* tree.cs (Tree.RecordDecl): Call ds.RecordDecl().

2003-09-02  Ravi Pratap  <ravi@ximian.com>

	* attribute.cs (CheckAttributeTarget): Ensure that we allow return
	value attributes to be applied to ParameterBuilders.

	* class.cs (MethodCore.LabelParameters): Make static and more
	generic so that it can be used from other places - like interface
	methods, for instance.

	* interface.cs (Interface.Emit): Call LabelParameters before
	emitting attributes on the InterfaceMethod.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* ecore.cs (SimpleName.SimpleNameResolve): Look for members before
	resolving aliases; fixes #47927.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* statement.cs (Using.DoResolve): This is internally emitting a
	try/finally clause, so we need to set ec.NeedExplicitReturn if we
	do not always return.  Fixes #47681.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberCore): Moved WarningNotHiding(),
	Error_CannotChangeAccessModifiers() and CheckMethodAgainstBase()
	into MemberBase.